[tool.poetry]
name = "tennis-server"
version = "0.1.0"
description = "Tennis services"
authors = ["Andrei Boyanov <andrei.boyanov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-restplus = "^0.13.0"
pymongo = "^3.10.1"
Flask-PyMongo = "^2.3.0"
bs4 = "^0.0.1"
requests = "^2.31.0"
werkzeug = "2.2.3"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-mongodb = "^2.2.0"
mimesis = "^4.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
